--- a/homework_projects/01_expressions/01_expressions.ipynb
+++ b/homework_projects/01_expressions/01_expressions.ipynb
@@ -104,18 +104,7 @@
         "id": "lb0tjt-I8Ycr",
         "outputId": "ebce8eaf-6751-43ab-b2c3-489f47860c42"
       },
-      "outputs": [
-        {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with 'Python 3.13.2' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: '\"c:/Users/Hamdan Bhatti/AppData/Local/Programs/Python/Python313/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "SPEED_OF_LIGHT = 299_792_458  # m/s\n",
         "\n",
@@ -461,7 +450,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.13.2"
     }
   },
