01_expressions assignment complete

--- a/homework_projects/01_expressions/01_expressions.ipynb
+++ b/homework_projects/01_expressions/01_expressions.ipynb
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,7 +104,15 @@
         "id": "lb0tjt-I8Ycr",
         "outputId": "ebce8eaf-6751-43ab-b2c3-489f47860c42"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Energy in joules:  1.7975103574736352e+17\n"
+          ]
+        }
+      ],
       "source": [
         "SPEED_OF_LIGHT = 299_792_458  # m/s\n",
         "\n",
