--- a/homework_projects/01_expressions/01_expressions.ipynb
+++ b/homework_projects/01_expressions/01_expressions.ipynb
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -24,13 +24,14 @@
       },
       "outputs": [
         {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with 'Python 3.13.2' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: '\"c:/Users/Hamdan Bhatti/AppData/Local/Programs/Python/Python313/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "die1 in main() starts as:  16\n",
+            "Total of two dies:  10\n",
+            "Total of two dies:  5\n",
+            "Total of two dies:  11\n",
+            "die1 in main() ends as:  16\n"
           ]
         }
       ],
