Update Readme File

--- a/homework_projects/Assignment 00-05/06_functions/06_functions.ipynb
+++ b/homework_projects/Assignment 00-05/06_functions/06_functions.ipynb
@@ -1,34 +1,20 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "miTnrMhidtE4"
+      },
       "source": [
         "***00_averages***\n",
         "\n",
         "Write a function that takes two numbers and finds the average between the two.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "miTnrMhidtE4"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -38,12 +24,10 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Enter the first number: 2\n",
-            "Enter the second number: 4\n",
-            "The average is: 3.0\n"
+            "The average is: 7.5\n"
           ]
         }
       ],
@@ -66,17 +50,45 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "HlX9B7xPelNG"
+      },
       "source": [
         "***01_chaotic_counting***\n",
         "\n",
         "Fill out the chaotic_counting() function, which prints the numbers from 1 to 10, but with a catch. We've written a done() function which returns True with likelihood DONE_LIKELIHOOD -- at each number, before printing the number, you should call done() and check if it returns True or not. If done() returns True, we're done counting, and you should use a return statement to end the chaotic_counting() function execution and resume execution of main(), which will print \"I'm done.\". We've written main() for you -- check it out! Notice that we'll only print \"I'm done\" from main() once chaotic_counting() is done with its execution."
-      ],
-      "metadata": {
-        "id": "HlX9B7xPelNG"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eOrZi3Y3e60k",
+        "outputId": "22c438a8-dd43-42cd-8258-b05e13d8cc42"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "I'm going to count until 10 or until I feel like stopping, whichever comes first.\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "I'm done\n"
+          ]
+        }
+      ],
       "source": [
         "import random\n",
         "\n",
@@ -104,38 +116,13 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eOrZi3Y3e60k",
-        "outputId": "22c438a8-dd43-42cd-8258-b05e13d8cc42"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "I'm going to count until 10 or until I feel like stopping, whichever comes first.\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n",
-            "10\n",
-            "I'm done\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "cVQ9fGleiRBw"
+      },
       "source": [
         "***02_count_even***\n",
         "\n",
@@ -144,13 +131,33 @@
         "first populates a list by prompting the user for integers until they press enter (please use the prompt \"Enter an integer or press enter to stop: \"),\n",
         "\n",
         "and then prints the number of even numbers in the list."
-      ],
-      "metadata": {
-        "id": "cVQ9fGleiRBw"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gs3ISlZnjHiC",
+        "outputId": "8eaef76b-cddb-4984-e50e-3613efa5d006"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer or press enter to stop: 2\n",
+            "Enter an integer or press enter to stop: 4\n",
+            "Enter an integer or press enter to stop: 6\n",
+            "Enter an integer or press enter to stop: 7\n",
+            "Enter an integer or press enter to stop: 9\n",
+            "Enter an integer or press enter to stop: \n",
+            "Number of even numbers: 3\n"
+          ]
+        }
+      ],
       "source": [
         "def count_even(lst):\n",
         "    \"\"\"\n",
@@ -181,44 +188,39 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "gs3ISlZnjHiC",
-        "outputId": "8eaef76b-cddb-4984-e50e-3613efa5d006",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter an integer or press enter to stop: 2\n",
-            "Enter an integer or press enter to stop: 4\n",
-            "Enter an integer or press enter to stop: 6\n",
-            "Enter an integer or press enter to stop: 7\n",
-            "Enter an integer or press enter to stop: 9\n",
-            "Enter an integer or press enter to stop: \n",
-            "Number of even numbers: 3\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "PsI808OTeqR5"
+      },
       "source": [
         "***04_double***\n",
         "\n",
         "Fill out the double(num) function to return the result of multiplying num by 2. We've written a main() function for you which asks the user for a number, calls your code for double(num) , and prints the result."
-      ],
-      "metadata": {
-        "id": "PsI808OTeqR5"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7nB5rL8qewC2",
+        "outputId": "c6ef93f8-8dce-4c01-9c09-939460761844"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a number to double: 5\n",
+            "The doubled number is: 10.0\n"
+          ]
+        }
+      ],
       "source": [
         "def double(num):\n",
         "    return num * 2\n",
@@ -234,40 +236,39 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7nB5rL8qewC2",
-        "outputId": "c6ef93f8-8dce-4c01-9c09-939460761844"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a number to double: 5\n",
-            "The doubled number is: 10.0\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "kwlkrNAbgjAY"
+      },
       "source": [
         "***05_get_name***\n",
         "\n",
         "Fill out the get_name() function to return your name as a string! We've written a main() function for you which calls your function to retrieve your name and then prints it in a greeting.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "kwlkrNAbgjAY"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NYIM-7oEg5BK",
+        "outputId": "a6e39d3c-d9d7-4d00-b1e4-5eb7a82a3e05"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello, Hamdan!\n"
+          ]
+        }
+      ],
       "source": [
         "def get_name():\n",
         "    return \"Hamdan\"\n",
@@ -278,39 +279,39 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NYIM-7oEg5BK",
-        "outputId": "a6e39d3c-d9d7-4d00-b1e4-5eb7a82a3e05"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello, Hamdan!\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "DbGlmC2Gg_4Y"
+      },
       "source": [
         "***06_is_odd***\n",
         "\n",
         "10 even 11 odd 12 even 13 odd 14 even 15 odd 16 even 17 odd 18 even 19 odd\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "DbGlmC2Gg_4Y"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_qqwT3YThK2C",
+        "outputId": "d235e9ec-ffdb-4950-85bd-9d12f601731e"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 odd 2 even 3 odd 4 even 5 odd 6 even 7 odd 8 even 9 odd 10 even 11 odd 12 even 13 odd 14 even 15 odd 16 even 17 odd 18 even 19 odd "
+          ]
+        }
+      ],
       "source": [
         "def main():\n",
         "    for num in range(1, 20):\n",
@@ -321,39 +322,44 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_qqwT3YThK2C",
-        "outputId": "d235e9ec-ffdb-4950-85bd-9d12f601731e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 odd 2 even 3 odd 4 even 5 odd 6 even 7 odd 8 even 9 odd 10 even 11 odd 12 even 13 odd 14 even 15 odd 16 even 17 odd 18 even 19 odd "
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "MtgwJB3UhWe5"
+      },
       "source": [
         "***07_print_divisor***\n",
         "\n",
         "Write the helper function print_divisors(num), which takes in a number and prints all of its divisors (all the numbers from 1 to num inclusive that num can be cleanly divided by (there is no remainder to the division). Don't forget to call your function in main()!\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "MtgwJB3UhWe5"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ygDkCsP4heqv",
+        "outputId": "b6ba5840-faaf-4e93-efaf-2534675184ae"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a number to find its divisors: 10\n",
+            "Divisors of 10 are:\n",
+            "1\n",
+            "2\n",
+            "5\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
         "def print_divisors(num):\n",
         "    for i in range(1, num + 1):\n",
@@ -367,44 +373,43 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ygDkCsP4heqv",
-        "outputId": "b6ba5840-faaf-4e93-efaf-2534675184ae"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a number to find its divisors: 10\n",
-            "Divisors of 10 are:\n",
-            "1\n",
-            "2\n",
-            "5\n",
-            "10\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hMlw9Aj-hrx1"
+      },
       "source": [
         "***08_print_multiple***\n",
         "\n",
         "Fill out print_multiple(message, repeats), which takes as parameters a string message to print, and an integer repeats number of times to print message. We've written the main() function for you, which prompts the user for a message and a number of repeats.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "hMlw9Aj-hrx1"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kosiISslhzGf",
+        "outputId": "a4e34799-69ff-4921-8c25-378e21aa58ea"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a message: Hello World\n",
+            "How many times to repeat it? 3\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n"
+          ]
+        }
+      ],
       "source": [
         "def print_multiple(message, repeats):\n",
         "    for _ in range(repeats):\n",
@@ -417,31 +422,13 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kosiISslhzGf",
-        "outputId": "a4e34799-69ff-4921-8c25-378e21aa58ea"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a message: Hello World\n",
-            "How many times to repeat it? 3\n",
-            "Hello World\n",
-            "Hello World\n",
-            "Hello World\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4B7ayhV2iDCB"
+      },
       "source": [
         "***09_sentence_generator***\n",
         "\n",
@@ -452,13 +439,31 @@
         "If part_of_speech is 1, we will assume the word is a verb use the template: \"It's so nice outside today it makes me want to ____!\"\n",
         "\n",
         "If part_of_speech is 2, we will assume the word is an adjective and use the template: \"Looking out my window, the sky is big and ____!\" make_sentence(word, part_of_speech) should not return anything, just print the correct sentence with the word filled in the blank."
-      ],
-      "metadata": {
-        "id": "4B7ayhV2iDCB"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v2YnEDNEicCe",
+        "outputId": "3553e704-1040-42d2-9da4-db7fb398be0f"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a word (noun, verb, or adjective): book\n",
+            "Now choose what kind of word it is:\n",
+            "0 = noun, 1 = verb, 2 = adjective\n",
+            "Your choice (0/1/2): 0\n",
+            "That book will be a great addition to my collection!\n"
+          ]
+        }
+      ],
       "source": [
         "def generate_sentence(word, pos_type):\n",
         "    if pos_type == 0:\n",
@@ -482,43 +487,40 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "v2YnEDNEicCe",
-        "outputId": "3553e704-1040-42d2-9da4-db7fb398be0f"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a word (noun, verb, or adjective): book\n",
-            "Now choose what kind of word it is:\n",
-            "0 = noun, 1 = verb, 2 = adjective\n",
-            "Your choice (0/1/2): 0\n",
-            "That book will be a great addition to my collection!\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "kmEc21yblelO"
+      },
       "source": [
         "***10_print_ones_digit***\n",
         "\n",
         "Write a function called print_ones_digit , which takes as a parameter an integer num and prints its ones digit. The modulo (remainder) operator, %, should be helpful to you here. Call your function from main()!\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "kmEc21yblelO"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rf90-sW4lls3",
+        "outputId": "55c56f21-c03c-473a-a4be-d5a3a7aa3415"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer: 237\n",
+            "The ones digit is: 7\n"
+          ]
+        }
+      ],
       "source": [
         "def print_ones_digit(num):\n",
         "    ones_digit = num % 10\n",
@@ -533,25 +535,30 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rf90-sW4lls3",
-        "outputId": "55c56f21-c03c-473a-a4be-d5a3a7aa3415"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter an integer: 237\n",
-            "The ones digit is: 7\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
