--- a/homework_projects/Assignments 1 to 6/4_Rock, Papper, Scissors/4_Rock, Papper, Scissors.ipynb
+++ b/homework_projects/Assignments 1 to 6/4_Rock, Papper, Scissors/4_Rock, Papper, Scissors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cc1d9efb",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
     "options = [\"rock\", \"paper\", \"scissors\"]\n",
     "\n",
     "while True:\n",
-    "    # User ki choice\n",
+    "    # User Choice\n",
     "    user_choice = input(\"Choose Rock, Paper or Scissors (or 'q' to quit): \").lower()\n",
     "    \n",
     "    if user_choice == \"q\":\n",
@@ -48,11 +48,11 @@
     "        print(\"Invalid choice! Please try again.\")\n",
     "        continue\n",
     "\n",
-    "    # Computer ki random choice\n",
+    "    # Computer Choice\n",
     "    computer_choice = random.choice(options)\n",
     "    print(f\"Computer chose: {computer_choice}\")\n",
     "\n",
-    "    # Winner decide karo\n",
+    "    # Winner Decision\n",
     "    if user_choice == computer_choice:\n",
     "        print(\"It's a draw! 😐\")\n",
     "    elif (user_choice == \"rock\" and computer_choice == \"scissors\") or \\\n",
