--- a/homework_projects/Assignments 1 to 6/1_Madlib-Project/1_Madlib_Project.ipynb
+++ b/homework_projects/Assignments 1 to 6/1_Madlib-Project/1_Madlib_Project.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Welcome to the Madlib Game!\n",
             "\n",
@@ -54,7 +40,7 @@
         "\n",
         "print(\"Welcome to the Madlib Game!\\n\")\n",
         "\n",
-        "# User se inputs lo\n",
+        "# User inputs for the Madlib\n",
         "name = input(\"Enter a name: \")\n",
         "place = input(\"Enter a place: \")\n",
         "animal = input(\"Enter an animal: \")\n",
@@ -75,5 +61,19 @@
         "print(story)\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
